--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Quiz</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <!-- Header with Highscores & Timer -->
+    <head id="header">
+      <button id="high-score-button">View High Scores</button>
+      <span id="timer">Time:</span>
+    </head>
+    <!-- Starting Page -->
+    <div id="starting-page">
+      <h1>Coding Quiz</h1>
+      <p>
+        Try to answer all of the questions within the time limit. Each incorrect
+        answer will deduct 10 seconds from the timer. Good luck!
+      </p>
+      <button id="start-button">Start Quiz</button>
+    </div>
+    <!-- Question Page -->
+    <main id="question-page"></main>
+    <!-- Initial Page -->
+    <div id="intial-page">
+      <label for="initial">Enter Initials:</label>
+      <input type="text" id="initial" placeholder="Example: AB" />
+      <button id="submit-button">Submit</button>
+    </div>
+    <!-- High Score Page -->
+    <div id="highscore-page">
+      <button id="back-button">Go Back</button>
+      <button id="clear-score-button">Clear Scores</button>
+    </div>
+
     <script src="./assets/js/script.js"></script>
-</body>
+  </body>
 </html>
