added heading, typo fix / re-label id

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <button id="submit-button">Submit</button>
     </div>
     <!-- High Score Page -->
-    <div id="highscore-page">
+    <div id="high-score-page">
+      <h2>High Scores</h2>
+        <span id="high-scores"></span>
       <button id="back-button">Go Back</button>
       <button id="clear-score-button">Clear Scores</button>
     </div>
