edited tags to fix inserting text issue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header with Highscores & Timer -->
     <head id="header">
       <button id="high-score-button">View High Scores</button>
-      <span id="timer">Time:</span>
+      <div>Time: <span id="timer"></span></div>
     </head>
     <!-- Starting Page -->
     <div id="starting-page">
@@ -33,7 +33,7 @@
     <!-- High Score Page -->
     <div id="high-score-page">
       <h2>High Scores</h2>
-        <span id="high-scores"></span>
+      <span id="high-scores"></span>
       <button id="back-button">Go Back</button>
       <button id="clear-score-button">Clear Scores</button>
     </div>
