added more tags & id's on question page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
       <button id="start-button">Start Quiz</button>
     </div>
     <!-- Question Page -->
-    <main id="question-page"></main>
+    <main id="question-page">
+        <h2 id="show-question"></h2>
+        <ol id="show-answers"></ol>
+        <hr>
+        <div id="answer-status"></div>
+    </main>
     <!-- Initial Page -->
     <div id="intial-page">
       <label for="initial">Enter Initials:</label>
