added p tag & id

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     </div>
     <!-- Question Page -->
     <main id="question-page">
-        <h2 id="show-question"></h2>
-        <ol id="show-answers"></ol>
-        <hr>
-        <div id="answer-status"></div>
+      <h2 id="show-question"></h2>
+      <ol id="show-answers"></ol>
+      <hr />
+      <div id="answer-status"></div>
     </main>
     <!-- Initial Page -->
     <div id="intial-page">
+      <p id="final-score"></p>
       <label for="initial">Enter Initials:</label>
       <input type="text" id="initial" placeholder="Example: AB" />
       <button id="submit-button">Submit</button>
