--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div id="answer-status"></div>
     </main>
     <!-- Initial Page -->
-    <div id="intial-page">
+    <div id="initial-page">
       <p id="final-score"></p>
       <label for="initial">Enter Initials:</label>
       <input type="text" id="initial" placeholder="Example: AB" />
