fixed incorrect tag name

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <!-- Header with Highscores & Timer -->
-    <head id="header">
+    <header id="header">
       <button id="high-score-button">View High Scores</button>
       <div>Time: <span id="timer"></span></div>
-    </head>
+    </header>
     <!-- Starting Page -->
     <div id="starting-page">
       <h1>Coding Quiz</h1>
