changed id names & added ol

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- High Score Page -->
     <div id="high-score-page">
       <h2>High Scores</h2>
-      <span id="high-scores"></span>
+      <ol id="high-scores-list"></ol>
       <button id="back-button">Go Back</button>
       <button id="clear-score-button">Clear Scores</button>
     </div>
